jvector-native/src/main/c/jvector_simd.h

/* Vector similarity kernels */
JVECTOR_SIMD_API float dot_product_f32(const float* a, size_t aoffset, const float* b, size_t boffset, size_t length);
JVECTOR_SIMD_API float cosine_f32(const float* a, size_t aoffset, const float* b, size_t boffset, size_t length);
JVECTOR_SIMD_API float euclidean_f32(const float* a, size_t aoffset, const float* b, size_t boffset, size_t length);
/* Element-wise in-place vector arithmetic */
JVECTOR_SIMD_API void    add_in_place_f32(float* v1, const float* v2, size_t length);