jvector-native/src/main/java/io/github/jbellis/jvector/vector/cnative/NativeSimdOps.java

     */
    public static final AddressLayout __caddr_t = NativeSimdOps.C_POINTER;
    /**
     * {@snippet lang=c :
     * typedef long __intptr_t
     * }
     */
    public static final OfLong __intptr_t = NativeSimdOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef unsigned int __socklen_t
     * }
     */
    public static final OfInt __socklen_t = NativeSimdOps.C_INT;
    /**
     * {@snippet lang=c :
     * typedef int __sig_atomic_t
     * }
     */
    public static final OfInt __sig_atomic_t = NativeSimdOps.C_INT;
    /**
     * {@snippet lang=c :
     * typedef __int8_t int8_t
     * }
     */
    public static final OfByte int8_t = NativeSimdOps.C_CHAR;
    /**
     * {@snippet lang=c :
     * typedef __int16_t int16_t
     * }
     */
    public static final OfShort int16_t = NativeSimdOps.C_SHORT;
    /**
     * {@snippet lang=c :
     * typedef __int32_t int32_t
     * }
     */
    public static final OfInt int32_t = NativeSimdOps.C_INT;
    /**
     * {@snippet lang=c :
     * typedef __int64_t int64_t
     * }
     */
    public static final OfLong int64_t = NativeSimdOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef __uint8_t uint8_t
     * }
     */
    public static final OfByte uint8_t = NativeSimdOps.C_CHAR;
    /**
     * {@snippet lang=c :
     * typedef __uint16_t uint16_t
     * }
     */
    public static final OfShort uint16_t = NativeSimdOps.C_SHORT;
    /**
     * {@snippet lang=c :
     * typedef __uint32_t uint32_t
     * }
     */
    public static final OfInt uint32_t = NativeSimdOps.C_INT;
    /**
     * {@snippet lang=c :
     * typedef __uint64_t uint64_t
     * }
     */
    public static final OfLong uint64_t = NativeSimdOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef __int_least8_t int_least8_t
     * }
     */
    public static final OfByte int_least8_t = NativeSimdOps.C_CHAR;
    /**
     * {@snippet lang=c :
     * typedef __int_least16_t int_least16_t
     * }
     */
    public static final OfShort int_least16_t = NativeSimdOps.C_SHORT;
    /**
     * {@snippet lang=c :
     * typedef __int_least32_t int_least32_t
     * }
     */
    public static final OfInt int_least32_t = NativeSimdOps.C_INT;
    /**
     * {@snippet lang=c :
     * typedef __int_least64_t int_least64_t
     * }
     */
    public static final OfLong int_least64_t = NativeSimdOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef __uint_least8_t uint_least8_t
     * }
     */
    public static final OfByte uint_least8_t = NativeSimdOps.C_CHAR;
    /**
     * {@snippet lang=c :
     * typedef __uint_least16_t uint_least16_t
     * }
     */
    public static final OfShort uint_least16_t = NativeSimdOps.C_SHORT;
    /**
     * {@snippet lang=c :
     * typedef __uint_least32_t uint_least32_t
     * }
     */
    public static final OfInt uint_least32_t = NativeSimdOps.C_INT;
    /**
     * {@snippet lang=c :
     * typedef __uint_least64_t uint_least64_t
     * }
     */
    public static final OfLong uint_least64_t = NativeSimdOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef signed char int_fast8_t
     * }
     */
    public static final OfByte int_fast8_t = NativeSimdOps.C_CHAR;
    /**
     * {@snippet lang=c :
     * typedef long int_fast16_t
     * }
     */
    public static final OfLong int_fast16_t = NativeSimdOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef long int_fast32_t
     * }
     */
    public static final OfLong int_fast32_t = NativeSimdOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef long int_fast64_t
     * }
     */
    public static final OfLong int_fast64_t = NativeSimdOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef unsigned char uint_fast8_t
     * }
     */
    public static final OfByte uint_fast8_t = NativeSimdOps.C_CHAR;
    /**
     * {@snippet lang=c :
     * typedef unsigned long uint_fast16_t
     * }
     */
    public static final OfLong uint_fast16_t = NativeSimdOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef unsigned long uint_fast32_t
     * }
     */
    public static final OfLong uint_fast32_t = NativeSimdOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef unsigned long uint_fast64_t
     * }
     */
    public static final OfLong uint_fast64_t = NativeSimdOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef long intptr_t
     * }
     */
    public static final OfLong intptr_t = NativeSimdOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef unsigned long uintptr_t
     * }
     */
    public static final OfLong uintptr_t = NativeSimdOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef __intmax_t intmax_t
     * }
     */
    public static final OfLong intmax_t = NativeSimdOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef __uintmax_t uintmax_t
     * }
     */
    public static final OfLong uintmax_t = NativeSimdOps.C_LONG;

    private static class cosine_f32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_LONG,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_LONG,
            NativeSimdOps.C_LONG
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("cosine_f32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * float cosine_f32(const float *a, size_t aoffset, const float *b, size_t boffset, size_t length)
     * }
     */
    public static FunctionDescriptor cosine_f32$descriptor() {
        return cosine_f32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * float cosine_f32(const float *a, size_t aoffset, const float *b, size_t boffset, size_t length)
     * }
     */
    public static MethodHandle cosine_f32$handle() {
        return cosine_f32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * float cosine_f32(const float *a, size_t aoffset, const float *b, size_t boffset, size_t length)
     * }
     */
    public static MemorySegment cosine_f32$address() {
        return cosine_f32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * float cosine_f32(const float *a, size_t aoffset, const float *b, size_t boffset, size_t length)
     * }
     */
    public static float cosine_f32(MemorySegment a, long aoffset, MemorySegment b, long boffset, long length) {
        var mh$ = cosine_f32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cosine_f32", a, aoffset, b, boffset, length);
            }
            return (float)mh$.invokeExact(a, aoffset, b, boffset, length);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class dot_product_f32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_LONG,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_LONG,
            NativeSimdOps.C_LONG
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("dot_product_f32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * float dot_product_f32(const float *a, size_t aoffset, const float *b, size_t boffset, size_t length)
     * }
     */
    public static FunctionDescriptor dot_product_f32$descriptor() {
        return dot_product_f32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * float dot_product_f32(const float *a, size_t aoffset, const float *b, size_t boffset, size_t length)
     * }
     */
    public static MethodHandle dot_product_f32$handle() {
        return dot_product_f32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * float dot_product_f32(const float *a, size_t aoffset, const float *b, size_t boffset, size_t length)
     * }
     */
    public static MemorySegment dot_product_f32$address() {
        return dot_product_f32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * float dot_product_f32(const float *a, size_t aoffset, const float *b, size_t boffset, size_t length)
     * }
     */
    public static float dot_product_f32(MemorySegment a, long aoffset, MemorySegment b, long boffset, long length) {
        var mh$ = dot_product_f32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("dot_product_f32", a, aoffset, b, boffset, length);
            }
            return (float)mh$.invokeExact(a, aoffset, b, boffset, length);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class euclidean_f32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_LONG,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_LONG,
            NativeSimdOps.C_LONG
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("euclidean_f32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * float euclidean_f32(const float *a, size_t aoffset, const float *b, size_t boffset, size_t length)
     * }
     */
    public static FunctionDescriptor euclidean_f32$descriptor() {
        return euclidean_f32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * float euclidean_f32(const float *a, size_t aoffset, const float *b, size_t boffset, size_t length)
     * }
     */
    public static MethodHandle euclidean_f32$handle() {
        return euclidean_f32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * float euclidean_f32(const float *a, size_t aoffset, const float *b, size_t boffset, size_t length)
     * }
     */
    public static MemorySegment euclidean_f32$address() {
        return euclidean_f32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * float euclidean_f32(const float *a, size_t aoffset, const float *b, size_t boffset, size_t length)
     * }
     */
    public static float euclidean_f32(MemorySegment a, long aoffset, MemorySegment b, long boffset, long length) {
        var mh$ = euclidean_f32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("euclidean_f32", a, aoffset, b, boffset, length);
            }
            return (float)mh$.invokeExact(a, aoffset, b, boffset, length);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class add_in_place_f32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_LONG
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("add_in_place_f32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void add_in_place_f32(float *v1, const float *v2, size_t length)
     * }
     */
    public static FunctionDescriptor add_in_place_f32$descriptor() {
        return add_in_place_f32.DESC;
    }
